--- a/index.html
+++ b/index.html
@@ -405,6 +405,6 @@
       </main>
     </div>
 
-    <script src="/src/script.js"></script>
+    <script src="./src/script.js" defer></script>
   </body>
 </html>
