--- a/index.html
+++ b/index.html
@@ -405,6 +405,13 @@
       </main>
     </div>
 
-    <script src="./src/js/script.js" defer></script>
+    <script >
+        function showScreen(screenNumber) {
+    document.querySelectorAll("div[id^='screen-']").forEach((screen) => {
+      screen.classList.add("hidden");
+    });
+    document.getElementById(`screen-${screenNumber}`).classList.remove("hidden");
+  }
+    </script>
   </body>
 </html>
