--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Screen 1 -->
     <div id="screen-1" class="h-screen flex flex-col items-center">
       <header
-        class="w-full max-w-[1000px] pt-2 pr-2 pl-1 text-white text-center text-lg flex justify-between items-center"
+        class="w-full max-w-content pt-2 pr-2 pl-1 text-white text-center text-lg flex justify-between items-center"
       >
         <nav
           class="top-0 left-0 right-0 p-2 cursor-pointer transform transition-transform duration-150"
@@ -42,7 +42,7 @@
           </svg>
         </nav>
 
-        <div class="logo">
+        <div class="logo cursor-pointer">
           <img src="/logo.png" alt="logo" />
         </div>
 
@@ -73,8 +73,8 @@
             <h1 class="text-darkBlue font-extra-extrabold mb-1 text-base">
               ООО ЗАПРАВКИН
             </h1>
-            <p class="text-slateGrey text-[10px] mb-1">ИНН 5905287782</p>
-            <p class="text-slateGrey text-[12px]">
+            <p class="text-slateGrey text-ten mb-1">ИНН 5905287782</p>
+            <p class="text-slateGrey text-small">
               Аккаунт создан 17 февраля 2022 года
             </p>
           </div>
@@ -201,14 +201,14 @@
           class="w-full rounded-xl shadow pt-4 pb-4 pl-3 pr-3 cursor-pointer bg-none border border-brightBlue"
           onclick="showScreen(2)"
         >
-          <h2 class="font-semibold text-brightBlue text-[12px]">
+          <h2 class="font-semibold text-brightBlue text-small">
             Наши подсказки и полезные советы. Помогают в работе и экономят время
             и силы.
           </h2>
         </div>
       </main>
       <footer
-        class="text-[10px] fixed bottom-0 left-1/2 transform -translate-x-1/2 w-full max-w-[1000px]"
+        class="text-ten fixed bottom-0 left-1/2 transform -translate-x-1/2 w-full max-w-content"
       >
         <div
           class="flex justify-between items-center pt-4 pb-4 pl-3 pr-3 m-2 bg-white rounded-xl"
@@ -310,7 +310,7 @@
     <div id="screen-2" class="hidden h-screen flex flex-col items-center">
       <header></header>
       <main
-        class="w-full max-w-[1000px] flex flex-col items-start justify-start gap-4"
+        class="w-full max-w-content flex flex-col items-start justify-start gap-4"
       >
         <div
           class="m-2 h-[82vh] bg-white flex flex-col gap-3.5 overflow-y-auto rounded-2xl"
@@ -341,7 +341,7 @@
               подготовили понятную инструкцию, как это сделать быстро.
             </h3>
             <div
-              class="flex gap-2 items-center justify-center transform transition-transform duration-150 hover:scale-105"
+              class="flex gap-2 items-center justify-center"
             >
               <p
                 class="text-dynamic text-teal text-center font-extra-extrabold"
@@ -360,7 +360,7 @@
               быстро, удобно и безопасно.
             </h3>
             <div
-              class="flex gap-2 items-center justify-center transform transition-transform duration-150 hover:scale-105"
+              class="flex gap-2 items-center justify-center"
             >
               <p
                 class="text-dynamic text-teal text-center font-extra-extrabold"
@@ -380,7 +380,7 @@
       <header></header>
       <main>
         <div
-          class="m-2 h-[82vh] max-w-[1000px] bg-secondary text-white overflow-y-auto rounded-2xl"
+          class="m-2 h-[82vh] max-w-content bg-secondary text-white overflow-y-auto rounded-2xl"
         >
           <button class="relative left-0 p-4" onclick="showScreen(2)">
             <svg
