--- a/index.html
+++ b/index.html
@@ -380,9 +380,9 @@
       <header></header>
       <main >
         <div
-          class="flex flex-col justify-center m-2 h-[98vh] max-w-content bg-secondary text-white overflow-y-auto rounded-2xl"
+          class="relative flex flex-col justify-center m-2 h-[98vh] max-w-content bg-secondary text-white overflow-y-auto rounded-2xl"
         >
-          <button class="absolute left-2 top-3 p-4" onclick="showScreen(2)">
+          <button class="absolute left-2 top-2 p-4" onclick="showScreen(2)">
             <svg
               class="hover:stroke-green stroke-white stroke-width-1.5"
               width="20"
