--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -313,7 +313,7 @@
         class="w-full max-w-content  flex flex-col items-start justify-start gap-4"
       >
         <div
-          class="m-2 h-[95vh] bg-white flex flex-col gap-3.5 overflow-y-auto rounded-2xl"
+          class="m-2 h-[90vh] bg-white flex flex-col gap-3.5 overflow-y-auto rounded-2xl"
         >
           <button class="left-4 pt-4 pl-4" onclick="showScreen(1)">
             <svg
@@ -380,7 +380,7 @@
       <header></header>
       <main >
         <div
-          class="relative flex flex-col justify-center m-2 h-[95vh] max-w-content bg-secondary text-white overflow-y-auto rounded-2xl"
+          class="relative flex flex-col justify-center m-2 h-[90vh] max-w-content bg-secondary text-white overflow-y-auto rounded-2xl"
         >
           <button class="absolute left-2 top-2 p-4" onclick="showScreen(2)">
             <svg
