--- a/index.html
+++ b/index.html
@@ -307,13 +307,13 @@
     </div>
 
     <!-- Screen 2 -->
-    <div id="screen-2" class="hidden h-screen flex flex-col items-center">
+    <div id="screen-2" class="hidden h-screen flex flex-col items-center h-[90vh]">
       <header></header>
       <main
-        class="w-full max-w-content  flex flex-col items-start justify-start gap-4"
+        class="w-full max-w-content  flex flex-col items-start justify-start gap-4 h-[90vh]"
       >
         <div
-          class="m-2 h-[90vh] bg-white flex flex-col gap-3.5 overflow-y-auto rounded-2xl"
+          class="m-2  bg-white flex flex-col gap-3.5 overflow-y-auto rounded-2xl h-[90vh]"
         >
           <button class="left-4 pt-4 pl-4" onclick="showScreen(1)">
             <svg
@@ -376,11 +376,11 @@
     </div>
 
     <!-- Screen 3 -->
-    <div id="screen-3" class="hidden h-screen flex flex-col items-center">
+    <div id="screen-3" class="hidden h-screen flex flex-col items-center h-[90vh]">
       <header></header>
-      <main >
+      <main class="h-[90vh]">
         <div
-          class="relative flex flex-col justify-center m-2 h-[90vh] max-w-content bg-secondary text-white overflow-y-auto rounded-2xl"
+          class="relative h-[90vh] flex flex-col justify-center m-2 h-[90vh] max-w-content bg-secondary text-white overflow-y-auto rounded-2xl"
         >
           <button class="absolute left-2 top-2 p-4" onclick="showScreen(2)">
             <svg
